Crash when using Track Refine #35581

Closed
opened 2013-05-31 11:47:19 +02:00 by Marek Moravec · 3 comments

%%%--- WIN7 64bit Nvidia GTX 560 ---

- current Blender from buildbot r57151 win64 ---


- Blender crashes when you click on Track Refine before you actually track the marker---


- Open Blender, open footage in Movie Clip editor, add a new marker, click Forwards, click Backwards - crash... ---

I know that refine doesn't work this way, but there shoud be no crash either. Maybe a warning that i didnt track anything yet...
%%%

%%%--- WIN7 64bit Nvidia GTX 560 --- - current Blender from buildbot r57151 win64 --- - Blender crashes when you click on Track Refine before you actually track the marker--- - Open Blender, open footage in Movie Clip editor, add a new marker, click Forwards, click Backwards - crash... --- I know that refine doesn't work this way, but there shoud be no crash either. Maybe a warning that i didnt track anything yet... %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev57156. Thanks for the report, closing.%%%

%%%Fixed in svn rev57156. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
2 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#35581
No description provided.