Fix #35581: Crash when using Track Refine